{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 33,
  "lineage": "7ed0914d-c876-1ac1-484d-bebc1fa9adc6",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670163592545:security-group/sg-0950555251cc435c3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0950555251cc435c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "node_group_one20240320153318151300000006",
            "name_prefix": "node_group_one",
            "owner_id": "670163592545",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e3e25280b90e9661"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.JbKanerikaEks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "internal_JbKanerikaEks_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670163592545:route-table/rtb-0c5e880028c7d575e",
            "default_route_table_id": "rtb-0c5e880028c7d575e",
            "id": "rtb-0c5e880028c7d575e",
            "owner_id": "670163592545",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db60fe6e2c83186a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "JbKanerikaEks"
            },
            "tags_all": {
              "Name": "JbKanerikaEks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3e25280b90e9661"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.JbKanerikaEks_gw",
            "module.vpc.aws_vpc.JbKanerikaEks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "JbKanerikaEks_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670163592545:internet-gateway/igw-0db60fe6e2c83186a",
            "id": "igw-0db60fe6e2c83186a",
            "owner_id": "670163592545",
            "tags": {
              "Name": "JbKanerikaEks"
            },
            "tags_all": {
              "Name": "JbKanerikaEks"
            },
            "vpc_id": "vpc-0e3e25280b90e9661"
          },
          "dependencies": [
            "module.vpc.aws_vpc.JbKanerikaEks"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0877a1e3fc6733c06",
            "route_table_id": "rtb-0c5e880028c7d575e",
            "subnet_id": "subnet-0e98e40a2d67ce7b9"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_JbKanerikaEks_default",
            "module.vpc.aws_internet_gateway.JbKanerikaEks_gw",
            "module.vpc.aws_subnet.public_JbKanerikaEks_subnet",
            "module.vpc.aws_vpc.JbKanerikaEks",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0239abfb046506997",
            "route_table_id": "rtb-0c5e880028c7d575e",
            "subnet_id": "subnet-0b735d5af8d5600c2"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_JbKanerikaEks_default",
            "module.vpc.aws_internet_gateway.JbKanerikaEks_gw",
            "module.vpc.aws_subnet.public_JbKanerikaEks_subnet",
            "module.vpc.aws_vpc.JbKanerikaEks",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_JbKanerikaEks_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670163592545:subnet/subnet-0e98e40a2d67ce7b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e98e40a2d67ce7b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "670163592545",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JbKanerikaEks"
            },
            "tags_all": {
              "Name": "JbKanerikaEks"
            },
            "vpc_id": "vpc-0e3e25280b90e9661"
          },
          "dependencies": [
            "module.vpc.aws_vpc.JbKanerikaEks",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670163592545:subnet/subnet-0b735d5af8d5600c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b735d5af8d5600c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "670163592545",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JbKanerikaEks"
            },
            "tags_all": {
              "Name": "JbKanerikaEks"
            },
            "vpc_id": "vpc-0e3e25280b90e9661"
          },
          "dependencies": [
            "module.vpc.aws_vpc.JbKanerikaEks",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "JbKanerikaEks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670163592545:vpc/vpc-0e3e25280b90e9661",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bcefd8dbf63ac005",
            "default_route_table_id": "rtb-0c5e880028c7d575e",
            "default_security_group_id": "sg-07c7b93755930572a",
            "dhcp_options_id": "dopt-0cfeb969",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3e25280b90e9661",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5e880028c7d575e",
            "owner_id": "670163592545",
            "tags": {
              "Name": "JbKanerikaEks"
            },
            "tags_all": {
              "Name": "JbKanerikaEks"
            }
          }
        }
      ]
    }
  ]
}